--- a/app/src/main/res/layout/activity_image_upload.xml
+++ b/app/src/main/res/layout/activity_image_upload.xml
@@ -37,21 +37,37 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center">
-            <ImageView
-                android:id="@+id/imgView1"
+            <LinearLayout
                 android:layout_width="100dp"
-                android:layout_height="100dp"
-                />
-            <ImageView
-                android:id="@+id/imgView2"
+                android:layout_height="150dp"
+                android:background="@color/iv_back">
+                <ImageView
+                    android:id="@+id/imgView1"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </LinearLayout>
+            <LinearLayout
                 android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_marginLeft="5dp"/>
-            <ImageView
-                android:id="@+id/imgView3"
+                android:layout_height="150dp"
+                android:background="@color/iv_back"
+                android:layout_marginLeft="5dp">
+                <ImageView
+                    android:id="@+id/imgView2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    />
+            </LinearLayout>
+            <LinearLayout
                 android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_marginLeft="5dp"/>
+                android:layout_height="150dp"
+                android:background="@color/iv_back"
+                android:layout_marginLeft="5dp">
+                <ImageView
+                    android:id="@+id/imgView3"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    />
+            </LinearLayout>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -59,20 +75,35 @@
             android:orientation="horizontal"
             android:layout_marginTop="5dp"
             android:gravity="center">
-            <ImageView
-                android:id="@+id/imgView4"
+            <LinearLayout
                 android:layout_width="100dp"
-                android:layout_height="100dp" />
-            <ImageView
-                android:id="@+id/imgView5"
+                android:layout_height="150dp"
+                android:background="@color/iv_back">
+                <ImageView
+                    android:id="@+id/imgView4"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </LinearLayout>
+            <LinearLayout
                 android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_marginLeft="5dp"/>
-            <ImageView
-                android:id="@+id/imgView6"
+                android:layout_height="150dp"
+                android:layout_marginLeft="5dp"
+                android:background="@color/iv_back">
+                <ImageView
+                    android:id="@+id/imgView5"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </LinearLayout>
+            <LinearLayout
                 android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_marginLeft="5dp"/>
+                android:layout_height="150dp"
+                android:layout_marginLeft="5dp"
+                android:background="@color/iv_back">
+                <ImageView
+                    android:id="@+id/imgView6"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 
