--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".MainActivity">
+    tools:context=".activities.home.MainActivity">
 
 
         <android.support.v7.widget.Toolbar
@@ -150,6 +150,16 @@
             android:layout_marginTop="16dp"
             android:text="@string/remove_user"
             android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/storage_button"
+            style="?android:textAppearanceSmall"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="@string/storage"
+            android:textStyle="bold" />
+
         <Button
             android:id="@+id/sign_out"
             style="?android:textAppearanceSmall"
